--- a/_config.yml
+++ b/_config.yml
@@ -1,14 +1,13 @@
 # Site settings
-title: Your awesome title
-email: your-email@domain.com
+title: Kenzie Togami's blogosphere
+email: admin@kenzierocks.me
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  A blog for kenzierocks (Kenzie Togami)
 baseurl: "" # the subpath of your site, e.g. /blog/
-url: "http://yourdomain.com" # the base hostname & protocol for your site
-twitter_username: jekyllrb
-github_username:  jekyll
+url: "http://kenzierocks.me" # the base hostname & protocol for your site
+twitter_username: kenzierocks
+github_username:  kenzierocks
 
 # Build settings
 markdown: kramdown
+permalink: /:categories/:year/:month/:day/:title/
