--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ description: > # this means to ignore newlines until "baseurl:"
   A blog for kenzierocks (Kenzie Togami)
 baseurl: "" # the subpath of your site, e.g. /blog/
 url: "http://kenzierocks.me" # the base hostname & protocol for your site
-twitter_username: kenzierocks
+twitter_username: ktogami
 github_username:  kenzierocks
 
 # Build settings
