--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
 # Site settings
 title: "Kenzie Togami's blogosphere"
-email: admin@kenzierocks.me
+email: ket1999@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
   A blog for kenzierocks (Kenzie Togami)
 baseurl: "" # the subpath of your site, e.g. /blog/
-url: "http://kenzierocks.me" # the base hostname & protocol for your site
+url: "https://kenzierocks.me" # the base hostname & protocol for your site
 twitter_username: ktogami
 github_username:  kenzierocks
 
